fixed overflow

--- a/project/sass/styles.scss
+++ b/project/sass/styles.scss
@@ -9,7 +9,7 @@ h1, h2, h3{
     padding: 10px;
     max-width: 1027px;
     background: #fff;
-    //overflow: hidden; 
+    overflow: hidden; 
 }
 body{
     background: url('../creations/texture.jpg') repeat fixed; }
